--- a/src/assets/scss/components/_modals.scss
+++ b/src/assets/scss/components/_modals.scss
@@ -111,7 +111,11 @@
         ul {
             @include unlist;
             width: 100%;
-            max-width: 390px;
+            max-width: 600px;
+
+            @include media-breakpoint-down(md) {
+                width: calc(100% - 100px);
+            }
     
             li {
                 color: #fff;
@@ -133,7 +137,7 @@
                     max-width: 360px;
                     margin-left: rem(14px);
                     @include media-breakpoint-down(md) {
-                        margin-left: rem(36px);
+                        margin-left: rem(18px);
                         max-width: 250px;
                     }
                 }
