--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -23,13 +23,13 @@
         background-size: 400% 400%;
         background-position: 0% 50%;
         animation: gradient 15s ease infinite;
-        padding-top: 100vh;
+        padding-top: rem(150px);
         padding-bottom: rem(40px);
         position: relative;
         overflow: hidden;
 
         @include media-breakpoint-down(md) {
-            padding-top: 50vh;
+            padding-top: rem(100px);
         }
 
 
