--- a/src/assets/scss/pages/_frontpage.scss
+++ b/src/assets/scss/pages/_frontpage.scss
@@ -3,7 +3,6 @@ $shadows-medium: multiple-box-shadow(200);
 $shadows-big: multiple-box-shadow(100);
 
 .frontpage {
-
   &__wrap {
     background-color: var(--bg-color);
   }
@@ -224,7 +223,6 @@ $shadows-big: multiple-box-shadow(100);
     max-width: 620px;
     position: relative;
     z-index: 100;
-
 
     @include media-breakpoint-down(xl) {
       max-width: 440px;
@@ -560,7 +558,7 @@ $shadows-big: multiple-box-shadow(100);
 
     img {
       width: 100%;
-      min-height: 50px;
+      min-height: 55px;
       height: auto;
       object-fit: contain;
     }
@@ -686,6 +684,15 @@ $shadows-big: multiple-box-shadow(100);
             top: -140px;
         } */
 
+    @media (max-height: 780px) and (max-width: 700px) {
+      top: -130px;
+    }
+
+    @media (max-width: 450px) and (max-height: 800px) {
+      top: -110px;
+
+    }
+
     @media (max-height: 700px) and (max-width: 400px) {
       display: none;
     }
@@ -727,6 +734,11 @@ $shadows-big: multiple-box-shadow(100);
 
     @media (max-width: 450px) {
       margin-bottom: 120px;
+    }
+
+    @media (max-width: 450px) and (max-height: 800px) {
+      margin-bottom: 90px;
+
     }
 
     img {
@@ -774,7 +786,7 @@ $shadows-big: multiple-box-shadow(100);
     @extend %btn-outline;
     margin-right: rem(20px);
     font-size: rem(14px);
-    
+
     @include media-breakpoint-down(md) {
       margin-right: 0;
       display: block;
@@ -987,6 +999,10 @@ $shadows-big: multiple-box-shadow(100);
     padding: rem(22px 8px);
     display: none;
     margin-bottom: 0;
+
+    a {
+      color: #fff;
+    }
 
     @include media-breakpoint-down(md) {
       padding: rem(10px 8px);
